adapter-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: adapter-busybox
  name: adapter-busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo "$(date) | $(du -sh ~)" >> /var/logs/diskspace.txt; sleep 5; done;
    image: busybox
    name: adapter
    resources: {}
    volumeMounts:
    - mountPath: /var/logs
      name: myvolu
  - args:
    - /bin/sh
    - -c
    - sleep 20; while true; do while read LINE; do echo "$LINE" | cut -f2 -d"|" >> $(date +%Y-%m-%d-%H-%M-%S)-transformed.txt; done < /var/logs/diskspace.txt; sleep 20; done;
    image: busybox
    name: transformer
    resources: {}
    volumeMounts:
    - mountPath: /var/logs
      name: myvolu
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: myvolu
    emptyDir: {}
status: {}
