deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: expose
  name: kdpd00201
spec:
  replicas: 3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        envs:
        - name: NGINX_PORT
          value: 8001
status: {}
