pod--sc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: secured
  name: secured
spec:
  containers:
  - image: nginx
    name: secured
    resources: {}
    volumeMounts:
    - mountPath: /data/app
      name: myvolu
    securityContext:
      runAsGroup: 3000
  volumes:
  - name: myvolu
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
