pod-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: config-volume
        mountPath: /yet/another/path
  volumes:
    - name: config-volume
      configMap:
        name: another-config
  restartPolicy: Never
