pod-int.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvolume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: myvolume
    emptyDir: {}
status: {}
