pod-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: 
      requests:
        cpu: "100m"
        memory: 256Mi
      limits:
        cpu: "200m"
        memory: "512Mi"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
