pod-nginx-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-configmap
  name: nginx-configmap
spec:
  containers:
  - image: nginx
    name: nginx-configmap
    resources: {}
    volumeMounts:
      - name: cm-volumn
        mountPath: /yet/another/path
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: cm-volumn
      configMap:
        name: another-config
status: {}
