pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox
    resources: {}
    volumeMounts:
        - mountPath: "/etc/foo"
          name: mypvc
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: mypvc
      persistentVolumeClaim:
        claimName: mypvc
status: {}
