pod-request.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: hello
  name: nginx-resources
  namespace: pod-resources
spec:
  containers:
  - image: bonomat/nodejs-hello-world
    name: hello
    resources: 
      requests:
        cpu: "300m"
        memory: 1Gi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
