pod-sc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
  securityContext:
    runAsUser: 101
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
