pod-vols.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox1
    resources: {}
    volumeMounts:
    - name: my-volu
      mountPath: /etc/foo
   - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox2
    resources: {}
    volumeMounts:
    - name: my-volu
      mountPath: /etc/foo
   volumes:
   - name: my-volu
     emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
