pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: rq-demo
spec:
  containers:
  - image: nginx
    name: nginx
    resources: 
      requests:
        cpu: "400m"
        memory: 1Gi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
